# tree-sitter-inmanta

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-inmantazed.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_inmantazed/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterInmantazed/: inmantazed.h
bindings/swift/TreeSitterInmantazedTests/: TreeSitterInmantazedTests.swift
src/: grammar.json  node-types.json  parser.c
